[package]
name = "music_db"
version = "0.1.0"
authors = ["MrLeonardDude <leopagnez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
reqwest = "*"
tokio = { version = "1", features = ["full"] }